overlays/uksouth-prod-legacy/bpl/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: bpl.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: bpl.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: event-horizon
                port:
                  number: 80
          - path: /loyalty/[a-z0-9-]{1,100}/marketing/unsubscribe?.*
            pathType: Exact
            backend:
              service:
                name: polaris-api
                port:
                  number: 80
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: iris-api
                port:
                  number: 80
          - path: /hypercounter
            pathType: Prefix
            backend:
              service:
                name: hypercounter-api
                port:
                  number: 80
          - path: /reward
            pathType: Exact
            backend:
              service:
                name: aquila
                port:
                  number: 80
  tls:
    - hosts:
        - bpl.${cluster_name}.${location}.bink.sh
